--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,20 @@
+html,
+body {
+  height: 100%;
+}
+
+#root {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .App {
   text-align: center;
+  width: 100%;
+  max-width: 800px;
 }
 
 .App-logo {
